# Quant

.omo/run-continuation/: ses_116a2d27fffeSdosj4j2gdR1br.json
baostock_downloader/: __init__.py  api_client.py  cli.py  config.yaml  downloader.py  logger.py  models.py  pyproject.toml  storage.py
baostock_downloader/tests/: __init__.py
docs/superpowers/plans/: 2026-06-21-bao-stock-downloader-plan.md
docs/superpowers/specs/: 2026-06-21-bao-stock-downloader-design.md
openspec/changes/quant-backtest-system/: design.md  proposal.md  tasks.md
openspec/changes/quant-backtest-system/specs/analytics-reporting/: spec.md
openspec/changes/quant-backtest-system/specs/backtest-engine/: spec.md
openspec/changes/quant-backtest-system/specs/data-storage/: spec.md
openspec/changes/quant-backtest-system/specs/market-data-downloader/: spec.md
openspec/changes/quant-backtest-system/specs/strategy-framework/: spec.md
tests/: test_api_client.py  test_downloader.py  test_e2e.py  test_storage.py
