[project]
name = "baostock-downloader"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "baostock>=0.8.8",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0"]

[project.scripts]
baostock-download = "baostock_downloader.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
